# rdb

./: README.md
relational/: Cargo.toml  build.rs
relational/architecture/: README.md
relational/schema/: service.proto
relational/schema/table/: metadata.proto
relational/server/src/: main.rs
relational/server/src/plan/: mod.rs  op.rs  plan.rs  planner.rs
relational/server/src/storage/: mod.rs  row.rs
relational/src/: lib.rs
relational/src/relational/: mod.rs  rdb.rs
