[package]
authors = ["Bar Weiss <barw.code@gmail.com>"]
edition = "2024"
name = "rdb-relational"
version = "0.1.0"

[lib]
name = "rdb"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
bytes = "1.10.0"
prost = "0.13"
prost-types = "0.13"
sqlparser = "0.54.0"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1"
tonic = "*"

[build-dependencies]
tonic-build = "*"
